--- a/Book.Naergaga.Models/Book.Naergaga.Models.csproj
+++ b/Book.Naergaga.Models/Book.Naergaga.Models.csproj
@@ -116,6 +116,7 @@
     <Compile Include="IdentityViewModel\IdentityModels.cs" />
     <Compile Include="IdentityViewModel\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PublicView\HomeIndexViewModel.cs" />
     <Compile Include="ViewModel\AuthorViewModel.cs" />
     <Compile Include="ViewModel\BookTagsViewModel.cs" />
     <Compile Include="ViewModel\CategoryViewModel.cs" />
