初步实现程序基本功能。

--- a/Book.Naergaga/Book.Naergaga.csproj
+++ b/Book.Naergaga/Book.Naergaga.csproj
@@ -225,7 +225,6 @@
     <Compile Include="Areas\Admin\Controllers\TagController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BookController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Extensions\PagingHelper.cs" />
     <Compile Include="Global.asax.cs">
@@ -321,7 +320,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Book\HomeBook.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
@@ -343,6 +342,8 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Book\Index.cshtml" />
+    <Content Include="Views\Book\AuthorBook.cshtml" />
+    <Content Include="Views\Book\CategoryBook.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\books\" />
