--- a/Book.Naergaga/Book.Naergaga.csproj
+++ b/Book.Naergaga/Book.Naergaga.csproj
@@ -225,6 +225,8 @@
     <Compile Include="Areas\Admin\Controllers\TagController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BookController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Controllers\ImageController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Extensions\PagingHelper.cs" />
     <Compile Include="Global.asax.cs">
@@ -344,10 +346,13 @@
     <Content Include="Views\Book\Index.cshtml" />
     <Content Include="Views\Book\AuthorBook.cshtml" />
     <Content Include="Views\Book\CategoryBook.cshtml" />
+    <Content Include="Views\Error\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\books\" />
+    <Folder Include="App_Data\img\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Views\Image\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
