--- a/Book.Naergaga.Models/Book.Naergaga.Models.csproj
+++ b/Book.Naergaga.Models/Book.Naergaga.Models.csproj
@@ -100,12 +100,9 @@
   <ItemGroup>
     <Compile Include="AdminView\BookEditViewModel.cs" />
     <Compile Include="AdminView\AuthorEditViewModel.cs" />
-    <Compile Include="AdminView\BookIndexViewModel.cs" />
-    <Compile Include="AdminView\AuthorIndexViewModel.cs" />
+    <Compile Include="AdminView\IndexViewModel.cs" />
     <Compile Include="AdminView\TagEditViewModel.cs" />
     <Compile Include="AdminView\CategoryEditViewModel.cs" />
-    <Compile Include="AdminView\CategoryIndexViewModel.cs" />
-    <Compile Include="AdminView\TagIndexViewModel.cs" />
     <Compile Include="Common\ErrorModel.cs" />
     <Compile Include="Common\PageOption.cs" />
     <Compile Include="EntityContext\DataContext.cs" />
