添加搜索，改进分页。

--- a/Book.Naergaga.Service/Book.Naergaga.Service.csproj
+++ b/Book.Naergaga.Service/Book.Naergaga.Service.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="BaseSerivces\EntityService.cs" />
     <Compile Include="BaseSerivces\IEntityService.cs" />
+    <Compile Include="CommonService\SearchService.cs" />
     <Compile Include="ModelService\Implanment\CategoryService.cs" />
     <Compile Include="ModelService\Implanment\TagService.cs" />
     <Compile Include="ModelService\Implanment\BookTagsService.cs" />
