--- a/Book.Naergaga.Models/Book.Naergaga.Models.csproj
+++ b/Book.Naergaga.Models/Book.Naergaga.Models.csproj
@@ -117,11 +117,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicView\BookCategoryViewModel.cs" />
     <Compile Include="PublicView\BookAuthorViewModel.cs" />
+    <Compile Include="PublicView\SearchViewModel.cs" />
     <Compile Include="PublicView\HomeIndexViewModel.cs" />
     <Compile Include="ViewModel\AuthorViewModel.cs" />
     <Compile Include="ViewModel\BookTagsViewModel.cs" />
     <Compile Include="ViewModel\CategoryViewModel.cs" />
     <Compile Include="ViewModel\EBookViewModel.cs" />
+    <Compile Include="ViewModel\SearchFormViewModel.cs" />
     <Compile Include="ViewModel\TagViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
