--- a/Book.Naergaga.CmdTest/App.config
+++ b/Book.Naergaga.CmdTest/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="conn1" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-Book.Naergaga-20160916123412;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="conn1" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=tmp-Book.Naergaga;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
